changed api_token to api-token in requests, adjusted documentation
